--- a/mostra e esconde/style.css
+++ b/mostra e esconde/style.css
@@ -16,10 +16,10 @@
   dialog::backdrop {
     background-color: rgba(0, 0, 0, .5);
   }
-
+/* 
   dialog[open] {
     display: flex;
-  }
+  } */
   
   #cabecalho {
       margin-left: 12rem;
